syntax = "proto3";

option go_package = "genproto/users_service";

package users_service;
import "teacher_service.proto";


service AdministrationService{
    rpc Create(CreateAdministration) returns (Administration){}
    rpc GetById(AdministrationPrimaryKey) returns (Administration){}
    rpc GetList(GetListAdministrationRequest) returns (GetListAdministrationResponse){}
    rpc Update(UpdateAdministration) returns (Administration){}
    rpc Delete(AdministrationPrimaryKey) returns (Empty){}
    
}


message AdministrationPrimaryKey{
    string id = 1;
}

message Administration{
    string id = 1;
    string full_name = 2;
    string phone = 3;
    string password = 4;
    string login = 5;
    string salary = 6;
    string ielts_score = 7;
    string branch_id = 8;
    string role_id = 9;
    string created_at = 10;
    string updated_at = 11;
}

message CreateAdministration {
    string full_name = 1;
    string phone = 2;
    string password = 3;
    string login = 4;
    string salary = 5;
    string ielts_score = 6;
    string branch_id = 7;
    string role_id = 8;
}

message UpdateAdministration {
    string id = 1;
    string full_name = 2;
    string phone = 3;
    string password = 4;
    string login = 5;
    string salary = 6;
    string ielts_score = 7;
    string branch_id = 8;
    string role_id = 9;
}

message GetListAdministrationRequest{
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}


message GetListAdministrationResponse{
    int64 count = 1;
    repeated Administration administrations = 2;
}