syntax = "proto3";
option go_package = "genproto/users_service";
package users_service;
import "teacher_service.proto";

service ManagerService{
    rpc Create(CreateManager) returns (Manager){}
    rpc GetById(ManagerPrimaryKey) returns (Manager){}
    rpc GetList(GetListManagerRequest) returns (GetListManagerResponse){}
    rpc Update(UpdateManager) returns (Manager){}
    rpc Delete(ManagerPrimaryKey) returns (Empty){}

}

message ManagerPrimaryKey{
    string id = 1;
}

message Manager{
    string id = 1;
    string full_name = 2;
    string phone = 3;
    string saley = 4;
    string password = 5;
    string login = 6;
    string branch_id = 7;
    string role_id = 8;
    string created_at = 9;
    string updated_at = 10;
}

message CreateManager{
    string full_name = 1;
    string phone = 2;
    string saley = 3;
    string password = 4;
    string login = 5;
    string branch_id = 6;
    string role_id = 7;
}


message UpdateManager{
    string id = 1;
    string full_name = 2;
    string phone = 3;
    string saley = 4;
    string password = 5;
    string login = 6;
    string branch_id = 7;
    string role_id = 8;
}


message GetListManagerRequest{
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}


message GetListManagerResponse{
    int64 count = 1;
    repeated Manager managers = 2;
}